--- a/apps/templates/home/virtual-reality.html
+++ b/apps/templates/home/virtual-reality.html
@@ -1,12 +1,12 @@
 <!--
 =========================================================
-* Soft UI Dashboard - v1.0.6
+* GrabVoice - v1.0.6
 =========================================================
 
-* Product Page: https://www.creative-tim.com/product/soft-ui-dashboard
-* Copyright 2022 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://www.creative-tim.com/license)
-* Coded by Creative Tim
+* Product Page: https://www.GrabVoice.com/product/soft-ui-dashboard
+* Copyright 2022 GrabVoice (https://www.GrabVoice.com)
+* Licensed under MIT (https://www.GrabVoice.com/license)
+* Coded by GrabVoice
 
 =========================================================
 
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" href="{{ config.ASSETS_ROOT }}/img/favicon.png">
 
   <title>
-    Soft UI Dashboard - VR Page | AppSeed
+    GrabVoice - VR Page | GrabVoice
   </title>
   
   <!--     Fonts and icons     -->
