--- a/apps/static/assets/scss/soft-ui-dashboard.scss
+++ b/apps/static/assets/scss/soft-ui-dashboard.scss
@@ -1,11 +1,11 @@
 // =========================================================
-// * Soft UI Dashboard - v1.0.5
+// * GrabVoice - v1.0.5
 // =========================================================
 //
-// * Product Page: https://www.creative-tim.com/product/soft-ui-dashboard
-// * Copyright 2022 Creative Tim (https://www.creative-tim.com)
+// * Product Page: https://www.GrabVoice.com/product/soft-ui-dashboard
+// * Copyright 2022 GrabVoice (https://www.GrabVoice.com)
 //
-// Coded by www.creative-tim.com
+// Coded by www.GrabVoice.com
 //
 // =========================================================
 //
