--- a/apps/static/assets/scss/soft-ui-dashboard/plugins/free/_flatpickr.scss
+++ b/apps/static/assets/scss/soft-ui-dashboard/plugins/free/_flatpickr.scss
@@ -792,7 +792,7 @@ span.flatpickr-weekday {
 
 
 
-//////////// Creative Tim Changes
+//////////// GrabVoice Changes
 
 .datepicker.flatpickr-input{
   background-color: $white;
