--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -3,12 +3,12 @@
       <div class="row">
         <div class="col-lg-8 mb-4 mx-auto text-center">
           <a href="https://bit.ly/3fKQZaL" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            Creative-Tim
+            GrabVoice
           </a>
-          <a href="https://appseed.us" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            AppSeed
+          <a href="https://GrabVoice.us" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+            GrabVoice
           </a>
-          <a href="https://appseed.us/support/" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+          <a href="https://GrabVoice.us/support/" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
             Support
           </a>
         </div>
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="col-8 mx-auto text-center mt-1">
           <p class="mb-0 text-secondary">
-            &copy; Creative-Tim - Coded by AppSeed.
+            &copy; GrabVoice - Coded by GrabVoice.
           </p>
         </div>
       </div>
