--- a/apps/templates/includes/sidebar-rtl.html
+++ b/apps/templates/includes/sidebar-rtl.html
@@ -3,7 +3,7 @@
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute start-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="/">
         <img src="{{ config.ASSETS_ROOT }}/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="me-1 font-weight-bold">Soft UI Dashboard</span>
+<!--        <span class="me-1 font-weight-bold">GrabVoice</span>-->
       </a>
     </div>
     <hr class="horizontal dark mt-0">
@@ -166,7 +166,7 @@
             <div class="docs-info">
               <h6 class="text-white up mb-0">?Need help</h6>
               <br />
-              <a href="https://appseed.us/support/" 
+              <a href="https://GrabVoice.us/support/"
                  target="_blank" class="btn btn-white btn-sm w-100 mb-0">Contact Support</a>
             </div>
           </div>
