--- a/apps/templates/includes/fixed-plugin.html
+++ b/apps/templates/includes/fixed-plugin.html
@@ -52,7 +52,7 @@
 
         <a class="btn btn-outline-dark w-100" 
            target="_blank" 
-           href="https://GrabVoice.us/product/soft-ui-dashboard/flask/">Download</a>
+           href="https://grabvoice.com/">Download</a>
 
     </div>
     </div>
