--- a/apps/templates/includes/footer-rtl.html
+++ b/apps/templates/includes/footer-rtl.html
@@ -12,10 +12,10 @@
               <a href="https://bit.ly/3fKQZaL" class="nav-link text-muted" target="_blank">GrabVoice</a>
             </li>
             <li class="nav-item">
-              <a href="https://GrabVoice.us" class="nav-link text-muted" target="_blank">GrabVoice</a>
+              <a href="https://grabvoice.com" class="nav-link text-muted" target="_blank">GrabVoice</a>
             </li>
             <li class="nav-item">
-              <a href="https://GrabVoice.us/support/" class="nav-link text-muted" target="_blank">Support</a>
+              <a href="https://grabvoice.com" class="nav-link text-muted" target="_blank">Support</a>
             </li>
           </ul>
         </div>
