--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -9,10 +9,10 @@
         <div class="col-lg-6">
           <ul class="nav nav-footer justify-content-center justify-content-lg-end">
             <li class="nav-item">
-              <a href="https://GrabVoice.us/support/" class="nav-link text-muted" target="_blank">Support</a>
+              <a href="https://grabvoice.com" class="nav-link text-muted" target="_blank">Support</a>
             </li>            
             <li class="nav-item">
-              <a href="https://GrabVoice.us" class="nav-link text-muted" target="_blank">GrabVoice</a>
+              <a href="https://grabvoice.com" class="nav-link text-muted" target="_blank">GrabVoice</a>
             </li>
           </ul>
         </div>
