--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -5,10 +5,10 @@
           <a href="https://bit.ly/3fKQZaL" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
             GrabVoice
           </a>
-          <a href="https://GrabVoice.us" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+          <a href="https://grabvoice.com" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
             GrabVoice
           </a>
-          <a href="https://GrabVoice.us/support/" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+          <a href="https://grabvoice.com" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
             Support
           </a>
         </div>
