--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -40,7 +40,7 @@
         <li class="nav-item d-flex align-items-center">
           <a class="btn btn-round btn-sm mb-0 btn-outline-primary me-2" 
              target="_blank" 
-             href="https://GrabVoice.us/product/soft-ui-dashboard/flask/">Download</a>
+             href="https://grabvoice.com/">Download</a>
         </li>
       </div>
     </div>
