--- a/apps/templates/includes/sidebar-rtl.html
+++ b/apps/templates/includes/sidebar-rtl.html
@@ -166,7 +166,7 @@
             <div class="docs-info">
               <h6 class="text-white up mb-0">?Need help</h6>
               <br />
-              <a href="https://GrabVoice.us/support/"
+              <a href="https://grabvoice.com"
                  target="_blank" class="btn btn-white btn-sm w-100 mb-0">Contact Support</a>
             </div>
           </div>
