--- a/apps/templates/home/billing.html
+++ b/apps/templates/home/billing.html
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col-xl-6 mb-xl-0 mb-4">
             <div class="card bg-transparent shadow-xl">
-              <div class="overflow-hidden position-relative border-radius-xl" style="background-image: url('{{ config.ASSETS_ROOT }}/img/curved-images/curved14.jpg');">
+              <div class="overflow-hidden position-relative border-radius-xl" style="background-image: url('{{ config.ASSETS_ROOT }}/img/curved-images/AdobeStock_572952993.jpeg');">
                 <span class="mask bg-gradient-dark"></span>
                 <div class="card-body position-relative z-index-1 p-3">
                   <i class="fas fa-wifi text-white p-2"></i>
