--- a/apps/static/assets/css/soft-ui-dashboard.css
+++ b/apps/static/assets/css/soft-ui-dashboard.css
@@ -17074,14 +17074,14 @@ textarea.form-control-lg {
 /*!
 
 =========================================================
-* GrabVoice - v1.0.5
+* Marita - v1.0.5
 =========================================================
 
-* Product Page: https://www.GrabVoice.com/product/soft-ui-dashboard
-* Copyright 2022 GrabVoice (https://www.GrabVoice.com)
+* Product Page: https://www.Marita.com/product/soft-ui-dashboard
+* Copyright 2022 Marita (https://www.Marita.com)
 * Licensed under MIT (site.license)
 
-* Coded by www.GrabVoice.com
+* Coded by www.Marita.com
 
 =========================================================
 
