--- a/apps/templates/home/demo.html
+++ b/apps/templates/home/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GrabVoice Chatbot</title>
+    <title>Marita Chatbot</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">GrabVoice Chatbot Testing Demo</h1>
+      <h1 class="text-center">Marita Chatbot Testing Demo</h1>
       <form>
         <div class="form-group">
           <label for="user-input">You:</label>
@@ -69,7 +69,7 @@
 
   <footer>
     <p></p>
-    <h6 class="text-center">GrabVoice 2023 ©</h6>
+    <h6 class="text-center">Marita 2023 ©</h6>
   </footer>
 
 </html>
