--- a/chatbot/templates/base.html
+++ b/chatbot/templates/base.html
@@ -15,7 +15,7 @@
                     <img src="{{ url_for('static', filename='images/Grab.png') }}" style="width:60%;" />
                 </div>
                 <div class="chatbox__content--header">
-                    <!-- <h4 class="chatbox__heading--header">Welcome to GrabVoice</h4> -->
+                    <!-- <h4 class="chatbox__heading--header">Welcome to Marita</h4> -->
                 <!-- <p class="chatbox__description--header">Hi. My name is Matthew. How can I help you? </p> -->
 
                 </div>
