--- a/apps/static/assets/scss/soft-ui-dashboard.scss
+++ b/apps/static/assets/scss/soft-ui-dashboard.scss
@@ -1,11 +1,11 @@
 // =========================================================
-// * GrabVoice - v1.0.5
+// * Marita - v1.0.5
 // =========================================================
 //
-// * Product Page: https://www.GrabVoice.com/product/soft-ui-dashboard
-// * Copyright 2022 GrabVoice (https://www.GrabVoice.com)
+// * Product Page: https://www.Marita.com/product/soft-ui-dashboard
+// * Copyright 2022 Marita (https://www.Marita.com)
 //
-// Coded by www.GrabVoice.com
+// Coded by www.Marita.com
 //
 // =========================================================
 //
