--- a/apps/templates/includes/fixed-plugin.html
+++ b/apps/templates/includes/fixed-plugin.html
@@ -5,7 +5,7 @@
     <div class="card shadow-lg ">
       <div class="card-header pb-0 pt-3 ">
         <div class="float-start">
-          <h5 class="mt-3 mb-0">GrabVoiceConfigurator</h5>
+          <h5 class="mt-3 mb-0">MaritaConfigurator</h5>
           <p>See our dashboard options.</p>
         </div>
         <div class="float-end mt-4">
@@ -52,7 +52,7 @@
 
         <a class="btn btn-outline-dark w-100" 
            target="_blank" 
-           href="https://grabvoice.com/">Download</a>
+           href="https://Marita.com/">Download</a>
 
     </div>
     </div>
