--- a/apps/templates/includes/footer-rtl.html
+++ b/apps/templates/includes/footer-rtl.html
@@ -3,19 +3,19 @@
       <div class="row align-items-center justify-content-lg-between">
         <div class="col-lg-6 mb-lg-0 mb-4">
           <div class="copyright text-center text-sm text-muted text-lg-end">
-            &copy; GrabVoice - Coded by GrabVoice.
+            &copy; Marita - Coded by Xiao.
           </div>
         </div>
         <div class="col-lg-6">
           <ul class="nav nav-footer justify-content-center justify-content-lg-end">
             <li class="nav-item">
-              <a href="https://bit.ly/3fKQZaL" class="nav-link text-muted" target="_blank">GrabVoice</a>
+              <a href="https://bit.ly/3fKQZaL" class="nav-link text-muted" target="_blank">Marita</a>
             </li>
             <li class="nav-item">
-              <a href="https://grabvoice.com" class="nav-link text-muted" target="_blank">GrabVoice</a>
+              <a href="https://Marita.com" class="nav-link text-muted" target="_blank">Marita</a>
             </li>
             <li class="nav-item">
-              <a href="https://grabvoice.com" class="nav-link text-muted" target="_blank">Support</a>
+              <a href="https://Marita.com" class="nav-link text-muted" target="_blank">Support</a>
             </li>
           </ul>
         </div>
