--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -1,12 +1,12 @@
 <!--
 =========================================================
-* GrabVoice - v1.0.6
+* Marita - v1.0.6
 =========================================================
 
-* Product Page: https://www.GrabVoice.com/product/soft-ui-dashboard
-* Copyright 2022 GrabVoice (https://www.GrabVoice.com)
-* Licensed under MIT (https://www.GrabVoice.com/license)
-* Coded by GrabVoice
+* Product Page: https://www.Marita.com/product/soft-ui-dashboard
+* Copyright 2022 Marita (https://www.Marita.com)
+* Licensed under MIT (https://www.Marita.com/license)
+* Coded by Xiao
 
 =========================================================
 
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" href="{{ config.ASSETS_ROOT }}/img/favicon.png">
 
   <title>
-    GrabVoice - {% block title %}{% endblock %} | GrabVoice
+    Marita - {% block title %}{% endblock %} | Marita
   </title>
 
   <!--     Fonts and icons     -->
