--- a/apps/templates/home/api-view.html
+++ b/apps/templates/home/api-view.html
@@ -19,15 +19,7 @@
                 </div>
                 <div class="card-body p-3">
                     <ul class="list-group">
-                        <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
-                            <div class="avatar me-3">
-                                <img src="{{ config.ASSETS_ROOT }}/img/kal-visuals-square.jpg" alt="kal" class="border-radius-lg shadow">
-                            </div>
-                            <div class="d-flex align-items-start flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">Nurse Sophie B.</h6>
-                                <p class="mb-0 text-xs">Hi! I need more information..</p>
-                            </div>
-                        </li>
+
                         <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                             <div class="avatar me-3">
                                 <img src="{{ config.ASSETS_ROOT }}/img/marie.jpg" alt="kal" class="border-radius-lg shadow">
@@ -43,9 +35,60 @@
                             </div>
                             <div class="d-flex align-items-start flex-column justify-content-center">
                                 <h6 class="mb-0 text-sm">AI Reply</h6>
-                                <p class="mb-0 text-xs">About files I can..</p>
+                                <p class="mb-0 text-xs">Hi Michael, I wanted to check in to see how you are feeling. This is not a big probem...</p>
                             </div>
                         </li>
+                        <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
+                            <div class="avatar me-3">
+                                <img src="{{ config.ASSETS_ROOT }}/img/marie.jpg" alt="kal" class="border-radius-lg shadow">
+                            </div>
+                            <div class="d-flex align-items-start flex-column justify-content-center">
+                                <h6 class="mb-0 text-sm">Patient</h6>
+                                <p class="mb-0 text-xs">I’m experiencing more pain than normal today. I am super torturing, I cannot tolerate anymore!!!</p>
+                            </div>
+                        </li>
+
+                        <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
+                            <div class="avatar me-3">
+                                <img src="{{ config.ASSETS_ROOT }}/img/ivana-square.jpg" alt="kal" class="border-radius-lg shadow">
+                            </div>
+                            <div class="d-flex align-items-start flex-column justify-content-center">
+                                <h6 class="mb-0 text-sm">AI Reply</h6>
+                                <p class="mb-0 text-xs">Okay, I will @Sophie </p>
+                            </div>
+                        </li>
+
+
+                        <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
+                            <div class="avatar me-3">
+                                <img src="{{ config.ASSETS_ROOT }}/img/kal-visuals-square.jpg" alt="kal" class="border-radius-lg shadow">
+                            </div>
+                            <div class="d-flex align-items-start flex-column justify-content-center">
+                                <h6 class="mb-0 text-sm">Nurse Sophie B.</h6>
+                                <p class="mb-0 text-xs">Hi! I need more information..</p>
+                            </div>
+                        </li>
+
+                        <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
+                            <div class="avatar me-3">
+                                <img src="{{ config.ASSETS_ROOT }}/img/marie.jpg" alt="kal" class="border-radius-lg shadow">
+                            </div>
+                            <div class="d-flex align-items-start flex-column justify-content-center">
+                                <h6 class="mb-0 text-sm">Patient</h6>
+                                <p class="mb-0 text-xs">.............</p>
+                            </div>
+                        </li>
+
+                        <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
+                            <div class="avatar me-3">
+                                <img src="{{ config.ASSETS_ROOT }}/img/kal-visuals-square.jpg" alt="kal" class="border-radius-lg shadow">
+                            </div>
+                            <div class="d-flex align-items-start flex-column justify-content-center">
+                                <h6 class="mb-0 text-sm">Nurse Sophie B.</h6>
+                                <p class="mb-0 text-xs">Okay, help you to @Dr. Kenrick</p>
+                            </div>
+                        </li>
+
 
                         <li class="list-group-item border-0 d-flex align-items-center px-0">
                             <div class="avatar me-3">
@@ -55,7 +98,7 @@
                                 <h6 class="mb-0 text-sm">Me</h6>
                                 <p class="mb-0 text-xs">Hi! I need more information..</p>
                             </div>
-                            <a class="btn btn-link pe-3 ps-0 mb-0 ms-auto" href="javascript:;">Reply</a>
+                            <a class="btn btn-primary" href="javascript:;">Reply</a>
                         </li>
                     </ul>
                 </div>
