--- a/apps/templates/home/profile.html
+++ b/apps/templates/home/profile.html
@@ -16,16 +16,18 @@
 
             <div class="card-body p-3">
                 <p class="text-sm">
-                  Hi, I’m Alec Thompson, Decisions: If you can’t decide, the answer is no. If two equally difficult paths, choose the one more painful in the short term (pain avoidance is creating an illusion of equality).
+                    No known allergies, occasional migraines, annual check-up due next month.
                 </p>
                 <hr class="horizontal gray-light my-4">
                 <ul class="list-group">
                   <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Full Name:</strong> &nbsp; Alec M. Thompson</li>
+                  <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Gender:</strong> &nbsp; Female</li>
+                  <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Address:</strong> &nbsp; 123 Elm Street, Springfield</li>
                   <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Mobile:</strong> &nbsp; (44) 123 1234 123</li>
                   <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Email:</strong> &nbsp; alecthompson@mail.com</li>
                   <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Location:</strong> &nbsp; Ireland</li>
                   <li class="list-group-item border-0 ps-0 pb-0">
-                    <strong class="text-dark text-sm">History and AI Advice:</strong> &nbsp;
+                    <strong class="text-dark text-sm">AI Advice:</strong> &nbsp; ................................................................
                   </li>
                 </ul>
 
