--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -305,9 +305,9 @@
       </div>
 
 
-      <button id="editBtn" class="btn btn-icon btn-outline-secondary ms-auto" style="position: relative;"><i class="ni ni-folder-17"></i> Upload to Cloud</button>
+      <button id="editBtn" class="btn btn-icon btn-outline-secondary ms-auto" style="position: relative;"><a href="/tables"><i class="ni ni-folder-17"></i> Upload and Check</a></button>
 
-      <a href="javascript:;" id="downloadButton" onclick="downloadWAV()" class="btn btn-icon btn-outline-secondary ms-auto" disabled>
+      <a href="javascript:;" id="downloadButton" class="btn btn-icon btn-outline-secondary ms-auto" disabled>
         <span class="btn-inner--text"><i class="fas fa-dot-circle text-danger" style="font-size: 15px; position: relative;"></i>Download Record</span>
         <!--                  <span class="btn-inner&#45;&#45;icon ms-2" style="font-size: 25px;"><i class="ni ni-folder-17"></i></span>-->
       </a>
